# maas-lifeboat

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: reliability-findings.md  strategy-optimization-plan.md
docs/results/: gateway-dogfood-2026-07-04.md  maas-probe-2026-07-04.md  maas-strategy-replay-2026-07-04.md  model-fallback-probe-2026-07-04.md
experiments/: analyze_gateway_dogfood.py  analyze_maas_ledger.py  probe_gateway.py  probe_maas.py  replay_strategies.py
gateway/: __init__.py  app.py  config.py  errors.py  logging.py  maas_gateway.py  pressure.py  protocols.py  sse.py  strategy.py  types.py
scripts/: doctor_gateway.sh  install_launchagent.sh  start_gateway.sh  uninstall_launchagent.sh
tests/: test_gateway_strategy.py
