[project]
name = "maas-lifeboat"
version = "0.1.0"
description = "Local OpenAI/Anthropic-compatible lifeboat gateway for flaky MAAS coding providers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi",
  "httpx",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "pytest",
]
socks = [
  "httpx[socks]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["gateway*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
